--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
 #score,
 #title,
 #messages,
-#playDiv {
+#playDiv,
+#resetDiv {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -106,11 +107,13 @@ ul#playerTwo-choice li a img {
   display: none;
 }
 
-#playButton {
-  background-color: rgb(87, 87, 87);
+#playButton,
+#reset {
+  background-color: rgb(116, 116, 116);
   color: white;
   height: 3rem;
   padding: 0 2rem;
   border-radius: 0.25rem;
   margin-top: 2rem;
+  font-size: 1.5rem;
 }
